# Teaching_InformationRetrieval

./: README.md  pyproject.toml
data/in/web/: README.md
indexing/: nonparametric.py  parametric.py
src/: general.py
src/indexing/: contextual.py  huffman.py  parametric.py
src/irse/: general.py
src/irse/indexing/: contextual.py  huffman.py  nonparametric.py  parametric.py
src/irse/retrieval/: bm25.py
src/irse/web/: crawler.py  pagerank.py
src/retrieval/: bm25.py
src/web/: crawler.py  hits.py  pagerank.py
tests/: indexing.py  web.py
