[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "irse"
version = "2024.04.01"
dependencies = []
requires-python = ">= 3.9"
authors = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
maintainers = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
description = "Backend code for the 'Information Retrieval & Search Engines' course exercises."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["information retrieval"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
github = [
    "fiject         @ git+https://github.com/bauwenst/fiject",
    "tktkt[github]  @ git+https://github.com/bauwenst/TkTkT"
]
